<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.home.HomeFragment">

    <data>

        <variable
            name="showLoading"
            type="java.lang.Boolean" />

        <variable
            name="showEmptyView"
            type="java.lang.Boolean" />

        <variable
            name="showErrorText"
            type="java.lang.Boolean" />

        <variable name="errorText" type="String"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/generic_size_48dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/search_view"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/searchview_height"
                        android:layout_marginTop="@dimen/progressbar_thickness"
                        app:iconifiedByDefault="false"
                        app:queryHint="@string/generic_placeholder_search" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/loading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:showOrHideLoading="@{showLoading}"
                        android:indeterminate="true" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_filters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/generic_size_8dp"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="3"
                tools:listitem="@layout/item_filter" />

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/generic_size_16dp"
                android:textColor="?attr/colorAccent"
                android:textSize="@dimen/generic_text_size_16sp"
                android:textStyle="bold"
                android:visibility="gone"
                android:text="@{errorText}"
                app:viewIsVisible="@{showErrorText}"
                app:layout_constraintBottom_toTopOf="@+id/iv_central"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_filters"
                app:layout_constraintVertical_bias="1.0"
                tools:text="Error Message"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_central"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/generic_size_48dp"
                android:background="@drawable/shape_oval"
                android:padding="@dimen/generic_size_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="@+id/verticalGuide2"
                app:layout_constraintStart_toStartOf="@+id/verticalGuide1"
                app:layout_constraintTop_toBottomOf="@+id/list_filters"
                app:srcCompat="@drawable/ic_search" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/generic_size_16dp"
                android:text="@string/empty_view_text_desc"
                android:textSize="@dimen/generic_text_size_16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_central"
                app:layout_constraintVertical_bias="0.01999998" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fadingEdgeLength="@dimen/generic_size_16dp"
                android:requiresFadingEdge="vertical"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbarThumbVertical="@color/purple_700"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_filters">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:visibility="gone">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/generic_size_16dp"
                        android:text="@string/home_text_filtering_desc" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_tasks"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:padding="@dimen/generic_size_8dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="10"
                        tools:listitem="@layout/item_task" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/empty_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:viewIsVisible="@{showEmptyView}"
                app:constraint_referenced_ids="tv_desc,iv_central,tv_error" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalGuide1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalGuide2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.65" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
